# bookservice

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf
.github/workflows/: rust.yml
bookservice_admin_api/: Cargo.toml  Dockerfile  README.md
bookservice_admin_api/src/: api.rs  app_config.rs  books_repository.rs  handlers.rs  lib.rs  main.rs
bookservice_recommendations/: Cargo.toml  Dockerfile  README.md
bookservice_recommendations/src/: api.rs  app_config.rs  handlers.rs  lib.rs  main.rs  recommendations.rs  recommendations_updater.rs
bookservice_repository/: Cargo.toml  Dockerfile  README.md
bookservice_repository/src/: api.rs  app_config.rs  books_repository.rs  client.rs  handlers.rs  lib.rs  main.rs
bookservice_repository/src/books_repository/: in_memory_books_repository.rs  postgres_books_repository.rs
bookservice_repository_api/: Dockerfile
bookservice_repository_api/src/: app_config.rs  main.rs
bookservice_reservations/: Cargo.toml  Dockerfile  README.md
bookservice_reservations/src/: api.rs  app_config.rs  book_existance_checker.rs  client.rs  handlers.rs  lib.rs  main.rs  reservations_repository.rs  users_repository.rs
bookservice_reservations/src/reservations_repository/: in_memory_reservations_repository.rs  postgres_reservations_repository.rs
bookservice_tests/: Cargo.toml
bookservice_tests/examples/: generate_books_and_reservations.rs
bookservice_tests/src/: lib.rs  load_test.rs  system_tests.rs
bookservice_user_api/: Cargo.toml  README.md
