[package]
name = "bookservice_admin_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
bookservice_repository = { path = "../bookservice_repository" }
tracing = "0.1.19"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.24" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_23"] }
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
json-patch = "2"
parking_lot = "0.12"