[package]
name = "bookservice_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bookservice_repository = { path = "../bookservice_repository", features = ["client"] }
bookservice_reservations = { path = "../bookservice_reservations", features = ["client"] }

tokio = "1"

[features]
system_tests = []
load_tests = []